--- a/index.html
+++ b/index.html
@@ -4,9 +4,192 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-comarce_site</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#"><img src="panda-commerce/logo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#shoes">Shoes</a>
+                <a class="nav-link" href="#backpack">Backpack</a>
+                <a class="nav-link" href="#contact">Contact us</a>
+              </div>
+            </div>
+          </nav>
+
+    </div>
     
+    <div class="container">
+      <div id="carouselExampleControls" class="carousel slide carousel_background" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row  d-flex align-items-center">
+              <div class="col-md-7">
+                <h1>MI LED TV 4A PRO 32 </h1>
+                <P>Contray to popular belief, Lorem ipsum dolor sit amet,</P>
+                <h1 class="price">$1200</h1>
+                <button class="buy_now_button">BUY NOW</button>
+              </div>
+            <div class="col-md-5">
+              <img src="panda-commerce/banner-images/tv.png" class="d-block w-100" alt="...">
+            </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+           <div class="row d-flex align-items-center">
+             <div class="col-md-7">
+              <h1>GAMEING HEADPHONE </h1>
+              <P>Contray to popular belief, Lorem ipsum dolor sit amet, !</P>
+              <h1 class="price">$420</h1>
+              <button class="buy_now_button">BUY NOW</button>
+
+             </div>
+            <div class="col-md-5">
+              <img src="panda-commerce/banner-images/headphone.png" class="d-block w-100" alt="...">
+            </div>
+           </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row d-flex align-items-center">
+              <div class="col-md-7">
+                <h1>X-BOX SERIS X</h1>
+                <P>Contray to popular belief, Lorem ipsum dolor sit amet, consectetur adipisicing. Lorem ipsum dolor sit amet. Molestiae, illum!</P>
+                <h1 class="price">$600</h1>
+                <button class="buy_now_button">BUY NOW</button>
+              </div>
+              <div class="col-md-5">
+                <img src="panda-commerce/banner-images/xbox.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+ 
+    <div class="container categories">
+      <div class="row">
+         <div class="col-md-4">
+          <div class="d-flex align-items-center justify-content-between cat1">
+            <h1>Watch</h1>
+            <img src="panda-commerce/categories/watch.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="d-flex justify-content-between align-items-center cat2">
+            <h1>Bag</h1>
+            <img src="panda-commerce/categories/bag.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div id="shoes" class="d-flex justify-content-between align-items-center cat3">
+            <h1>Shoes</h1>
+            <img src="panda-commerce/categories/shoes.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+
+<div class="container shoes" id="shoes">
+  <h3>Shoes</h3>
+  <div class="card-deck">
+    <div class="card">
+      <img src="panda-commerce/shoes/shoe-1.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Supply 350</h5>
+        <p class="card-text">This is a card with supporting text below as a natural.</p>
+        <h5>$120</h5>
+        <button class="buy_now_button">BUY NOW</button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="panda-commerce/shoes/shoe-2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Nike 360</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to .</p>
+        <h5>$320</h5>
+        <button class="buy_now_button">BUY NOW</button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="panda-commerce/shoes/shoe-3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Red Airmax</h5>
+        <p class="card-text">This is a wider card with supporting text below as a something that you know</p>
+        <h5>$350</h5>
+        <button class="buy_now_button">BUY NOW</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container" id="backpack">
+  <h3>Backpack  </h3>
+  <div class="card-deck">
+    <div class="card">
+      <img src="panda-commerce/bags/bag-1.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Red Backpack</h5>
+        <h5>$125</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+      <div class="card-footer">
+      <button class="buy_now_button">BUY NOW</button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="panda-commerce/bags/bag-2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Blue Backpack</h5>
+        <h5>$320</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      </div>
+      <div class="card-footer">
+      <button class="buy_now_button">BUY NOW</button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="panda-commerce/bags/bag-3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Black Backpack</h5>
+        <h5>$169</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+      </div>
+      <div class="card-footer">
+      <button class="buy_now_button">BUY NOW</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container carousel_background d-flex justify-content-center align-items-center" id="contact">
+<div><h3>LET'S STAY IN TOUCH</h3>
+  <h6>Get update on sales, specials and more.</h6>
+  <input class="form-control" type="text">
+  <button class="buy_now_button">Submit</button></div>
+
+</div>
+<footer class="d-flex justify-content-center">
+  <p>©copyright 2020. All rights reserved by Rony</p>
+</footer>
+
+        <!--java_script plugin-->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
 </html>
